--- a/app/views/mobile/events.html
+++ b/app/views/mobile/events.html
@@ -1,9 +1,14 @@
 <div class="page">
-  <div class="content white">
+  <div class="content">
 
     <h1 class="events">
-      MeetUpアルファ版リリース打ち上げ！
+      みーとあっぷうちあげ
     </h1>
+
+    <div class="events-date">
+      <p><small>開催日時</small><big>2013/9/7(金) 19:30 〜 22:30</big></p>
+    </div>
+
     <div class="events-info" ng-include src='"partials/" + device + "/events/general.html"'></div>
 
   </div>
