--- a/app/styles/partials/_mobile.scss
+++ b/app/styles/partials/_mobile.scss
@@ -9,16 +9,16 @@ button {
   height: auto;
   background: image-url("common/back-green-sub.png");
   .content {
-    padding-bottom: 70px;
+    padding-bottom: 30px;
   }
   h1 {
     font-weight: bold;
     color: $main-color;
-    width: 250px;
-    height: 70px;
     margin-left: auto;
     margin-right: auto;
     &.create-event {
+      width: 250px;
+      height: 70px;
       font-size: 20px;
       padding-top: 30px;
       padding-left: 70px;
@@ -27,9 +27,15 @@ button {
       background-position: center center;
     }
     &.events {
-      font-size:23px;
-      padding-left: 45px;
+      color: #525252;
+      width: 310px;
+      height: 40px;
+      text-align: center;
+      font-size: 16px;
+      padding-top: 17px;
       background: image-url("mobile/h1-event-title.png") no-repeat;
+      background-size: 310px;
+      background-position: 5px 30px;
     }
   }
   h2 {
@@ -148,7 +154,6 @@ footer {
         padding-left: 60px;
         padding-top: -40px;
         font-size: 18px;
-        cursor: pointer;
         &:hover {
           opacity: 0.7;
         }
@@ -348,7 +353,6 @@ footer {
         padding-left: 60px;
         padding-top: -40px;
         font-size: 18px;
-        cursor: pointer;
         &:hover {
           opacity: 0.7;
         }
@@ -414,14 +418,12 @@ footer {
   margin-right: auto;
   background: $main-color;
   border-radius: 5px;
-  cursor: pointer;
   p {
     clear: both;
     color: white;
     text-align: center;
     margin-top: 0px;
     padding-top: 19px;
-    cursor: pointer;
     font-size: 20px;
   }
   &:hover {
@@ -446,6 +448,9 @@ footer {
   padding: 10px;
   font-size: 12px;
   table {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     tr {
       th {
         width: 70px;
@@ -567,8 +572,6 @@ footer {
   }
 }
 
-
-
 .btn-goinput {
   width: 280px;
   height: 80px;
@@ -582,7 +585,6 @@ footer {
     color: white;
     text-align: center;
     padding-top:29px;
-    cursor: pointer;
     font-size: 20px;
   }
   &:hover {
@@ -590,9 +592,8 @@ footer {
   }
 }
 
-
 .time-output {
-  margin-top: 40px;
+  margin-top: 20px;
   p {
     text-align: center;
     color: #777777;
@@ -603,7 +604,6 @@ footer {
   }
   .overnavi {
     position: relative;
-    cursor: pointer;
     .overnavi-left {
       position: absolute;
       top: -25px;
@@ -630,8 +630,31 @@ footer {
 }
 
 
+.events-date {
+  margin-top: -24px;
+  width: 300px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  background: image-url("mobile/dates-header.png") no-repeat;
+  background-size: 300px;
+  background-position: center top;
+  p {
+    padding-top: 23px;
+    text-align: center;
+    small {
+      font-size: 13px;
+      color: yellow;
+    }
+    big {
+      margin-left: 10px;
+      color: white;
+    }
+  }
+}
+
 .events-info {
-  width: 923px;
+  width: 100%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
@@ -639,130 +662,114 @@ footer {
 }
 
 .basic-info {
-  width:451px;
-  float: left;
-  overflow: hidden;
-  margin-top: 6px;
-  margin-left: 50px;
-  line-height: 1.7em;
-  hr {
-    border: none;
-    border-bottom: 1px dotted $main-color;
-  }
+  width: 90%;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.3em;
   h2 {
-    margin-top: 5px;
     overflow: hidden;
     clear: both;
-    padding: 10px;
+    padding: 5px;
     .duration-h {
       float: left;
-      width: 80px;
+      width: 60px;
       color: #777777;
-      font-size: 15px;
+      font-size: 13px;
     }
     .duration-text {
       float: left;
-      width:330px;
-      margin-top: -2px;
-      margin-left: 20px;
+      width: 70%;
+      margin-top: -1px;
+      margin-left: 10px;
       color: $main-color;
       font-weight: bold;
-      font-size: 21px;
+      font-size: 16px;
     }
     .comment-h {
       float: left;
-      width: 80px;
+      width: 60px;
       color: #777777;
-      font-size: 15px;
+      font-size: 13px;
     }
     .comment-text {
       float: left;
-      width:330px;
-      margin-top: -2px;
-      margin-left: 20px;
+      width: 75%;
+      margin-left: 10px;
       color: #333333;
-      font-size: 17px;
+      font-size: 14px;
     }
   }
 }
 
-.input-schedule {
-  float: left;
-  width: 250px;
-  height: 71px;
-  background: image-url("desktop/btn-input.png") no-repeat;
-  margin-top: 30px;
-  margin-left: 50px;
-  cursor: pointer;
-  &:hover {
-    opacity: 0.7;
-  }
-  p {
-    color: white;
-    font-size: 22px;
-    padding-top: 27px;
-    padding-left: 58px;
-  }
-}
 
 .recommend-area {
-  float: left;
-  width: 366px;
+  overflow: hidden;
+  width: 91%;
+  max-width: 500px;
   height: auto;
-  background: image-url("common/back-orange-sub.png");
-  margin-top: 20px;
-  margin-left: 65px;
-  border: 1px solid #D93600;
-  hr {
-    border: 1px dotted #D93600;
-  }
+  margin-left: auto;
+  margin-right: auto;
   .recommend-h {
-    width: 100%;
-    height: 32px;
-    background: image-url("common/back-orange-main.png");
-    color: white;
-    text-align: center;
-    line-height: 2.0em;
+    border-bottom: 1px dotted #D93600;
+    overflow: hidden;
+    h2 {
+      float: left;
+      width: 80px;
+      height: 32px;
+      color: #D93600;
+      text-align: center;
+      font-weight: bold;
+      line-height: 2.0em;
+      margin-left: 5px;
+    }
   }
-  .recommend-days {
-    padding: 15px;
-    padding-right: 16px;
-    font-size: 17px;
+  table.recommend-days {
+    padding: 5px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 15px;
     text-align: left;
-    ul {
+    tr {
       overflow: hidden;
-      padding-top: 5px;
+      margin-top: 35px;
       padding-bottom: 5px;
-      &.recommend-no1 {
-        border-bottom: 1px dotted #D93600;
-      }
-      &.recommend-no2 {
-        border-bottom: 1px dotted #D93600;
-      }
-      li {
-        float: right;
-        margin-right: 20px;
-        margin-top: 2px;
-        line-height: 1.3em;
-        &.rank {
-          float: left;
-          width: 18px;
-          height: 19px;
-          margin-top: 2px;
-          margin-left: 20px;
-          padding-top: 4px;
-          padding-left: 25px;
-          font-size: 15px;
-          font-weight: bold;
-        }
+      th {
+        width: 15%;
+        height: 12px;
+        padding-top: 16px;
+        padding-left: 31px;
+        font-size: 11px;
+        font-weight: bold;
+        vertical-align: top;
         &.no1 {
           background: image-url("common/icon-rank-1.png") no-repeat;
+          background-size: 13px;
+          background-position: 15px 15px;
         }
         &.no2 {
           background: image-url("common/icon-rank-2.png") no-repeat;
+          background-size: 13px;
+          background-position: 15px 15px;
         }
         &.no3 {
           background: image-url("common/icon-rank-3.png") no-repeat;
+          background-size: 13px;
+          background-position: 15px 15px;
+        }
+      }
+      td {
+        width: 80%;
+        padding-top: 8px;
+        padding-left: 25px;
+        line-height: 1.8em;
+        vertical-align: top;
+        ul {
+          li {
+            float: left;
+            margin-right: 20px;
+          }
         }
       }
     }
@@ -770,51 +777,30 @@ footer {
 }
 
 .people-inputed-area {
-  float: left;
   overflow: hidden;
-  width: 366px;
+  width: 91%;
+  max-width: 500px;
   height: auto;
-  background: image-url("common/back-green-sub.png");
-  margin-top: 20px;
-  margin-left: 65px;
-  border: 1px solid $main-color;
-  hr {
-    border: 1px dotted #D93600;
-  }
+  margin-left: auto;
+  margin-right: auto;
   .people-inputed-h {
-    width: 100%;
-    height: 32px;
-    background: image-url("common/back-green-main.png");
-    color: white;
-    text-align: center;
-    line-height: 2.0em;
-  }
-  .people-inputed-contents {
-    padding: 15px;
-    padding-right: 16px;
-    font-size: 16px;
-    text-align: left;
-    ul {
-      overflow: hidden;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      li {
-        float: left;
-        width: 130px;
-        height: 27px;
-        background: image-url("common/icon-person-black.png") no-repeat;
-        background-size: 15px;
-        padding-left: 25px;
-        padding-top: -1px;
-        margin-top: 3px;
-        margin-left: 10px;
-        line-height: 1.3em;
-      }
+    border-bottom: 1px dotted $main-color;
+    overflow: hidden;
+    h2 {
+      float: left;
+      width: 80px;
+      height: 32px;
+      color: $main-color;
+      text-align: center;
+      font-weight: bold;
+      line-height: 2.0em;
+      margin-left: 5px;
     }
     p {
-      font-size: 15px;
-      margin-top: 10px;
-      margin-left: 12px;
+      float: right;
+      font-size: 10px;
+      margin-top: 13px;
+      margin-right: 5px;
       color: #777777;
       small {
         color: red;
@@ -822,136 +808,192 @@ footer {
       }
     }
   }
+  .people-inputed-contents {
+    padding: 5px;
+    font-size: 12px;
+    text-align: left;
+    ul {
+      overflow: hidden;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      li {
+        float: left;
+        width: 74px;
+        height: 19px;
+        background: image-url("common/icon-person-black.png") no-repeat;
+        background-size: 12px;
+        padding-left: 14px;
+        padding-top: -1px;
+        margin-top: 10px;
+        margin-left: 5px;
+        line-height: 1.3em;
+      }
+    }
+  }
 }
 
-.heatmap-area {
-  position: relative;
-  margin-top: 30px;
-  h2 {
-    width: 220px;
+.notches {
+  margin-top: 10px;
+  width: 100%;
+  height: 3px;
+  background: image-url("common/notches.png") repeat-x;
+  background-size: 7px;
+}
+
+.input-area {
+  padding-top: 30px;
+  background: white;
+  .tabs {
+    width: 240px;
+    height: 36px;
     margin-left: auto;
     margin-right: auto;
-    background: image-url("common/logo-symbol.png") no-repeat;
-    padding-bottom: 3px;
-    font-size: 25px;
+    background: image-url("mobile/tab-off.png") no-repeat;
+    background-size: 240px;
+    font-size: 17px;
+    color: white;
     text-align: center;
+    .tab-input {
+      float: left;
+      width: 119px;
+      height: 31px;
+      background: image-url("mobile/tab-input.png") no-repeat;
+      background-size: 0px;
+      &:hover {
+        opacity: 0.7;
+      }
+      p {
+        color: white;
+        padding-top: 8px;
+      }
+    }
+    .tab-heatmap {
+      float: right;
+      width: 119px;
+      height: 31px;
+      background: image-url("mobile/tab-heatmap.png") no-repeat;
+      background-size: 120px;
+      &:hover {
+        opacity: 0.7;
+      }
+      p {
+        color: #777;
+        padding-top: 8px;
+      }
+    }
   }
   .overnavi {
     position: relative;
-    cursor: pointer;
     .overnavi-left {
       position: absolute;
-      top: -25px;
-      right: 104px;
+      top: 0px;
+      left: 10px;
       width: 35px;
       height: 27px;
-      background: image-url("desktop/overnavi-left-die.png") no-repeat;
+      background: image-url("mobile/overnavi-left.png") no-repeat;
+      background-size: 35px;
     }
     .overnavi-right {
       position: absolute;
-      top: -25px;
-      right: 70px;
+      top: 0px;
+      right: 10px;
       width: 35px;
       height: 27px;
-      background: image-url("desktop/overnavi-right.png") no-repeat;
-    }
-  }
-  .heatmap {
-    margin-top: 30px;
-    overflow: hidden;
-    width: 830px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  p {
-    margin-top: 40px;
-    margin-left: 60px;
-    font-size: 15px;
-    &.help-mydates {
-      color: $friendly-orange;
-    }
-    &.help-select {
-      margin-top: 10px;
-      color: $dark-green;
+      background: image-url("mobile/overnavi-right.png") no-repeat;
+      background-size: 35px;
     }
   }
 }
 
 
 .area-selected {
-  position: absolute;
-  top: 810px;
-  left: 500px;
+  position: fixed;
+  top: 100px;
+  left: 100%;
+  width: 90%;
+  height: auto;
+  margin-left: -95%;
+  background: #222;
+  border-radius: 5px;
+  padding-bottom: 10px;
+  opacity: 0.95;
   z-index: 9999;
   .area-selected-info {
-    position: relative;
-    background: image-url("common/back-green-main.png");
-    opacity: 0.9;
-    height: auto;
-    max-height: 160px;
-    width: 300px;
-    margin-bottom: 20px;
-    border: 1px solid white;
     padding: 10px;
-    border-radius: 7px;
-    &:after {
-      content: '';
-      position: absolute;
-      border-top: 10px solid $main-color;
-      border-right: 7px solid transparent;
-      border-left: 7px solid transparent;
-      bottom: -7px;
-      left: 150px;
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    h3 {
+      text-align: center;
+      color: yellow;
+      font-size: 14px;
+      font-weight: bold;
+      margin-left: -5%;
     }
-    &:before {
-      content: '';
-      position: absolute;
-      border-top: 10px solid white;
-      border-right: 7px solid transparent;
-      border-left: 7px solid transparent;
-      bottom: -10px;
-      left: 150px;
+    hr {
+      float: left;
+      width:95%;
+      margin-top: 5px;
+      margin-left: auto;
+      margin-right: auto;
+      border-top: 1px dotted yellow;
     }
     ul {
       overflow: hidden;
       padding-top: 5px;
       padding-bottom: 5px;
-      color: white;
+      font-size: 12px;
       li {
         float: left;
-        width: 115px;
-        height: 27px;
+        width: 74px;
+        height: 19px;
         background: image-url("common/icon-person-white.png") no-repeat;
-        background-size: 15px;
-        padding-left: 25px;
+        background-size: 12px;
+        padding-left: 14px;
         padding-top: -1px;
-        margin-left: 10px;
+        margin-top: 10px;
+        margin-left: 5px;
         line-height: 1.3em;
+        color: white;
       }
     }
-    .btn-decide-day {
-      width: 160px;
-      height: 39px;
-      color: white;
-      font-size: 16px;
-      line-height: 2.5em;
-      text-align: center;
-      background: #B20000;
-      border-radius: 7px;
-      border: 1px solid #821E15;
-      margin-left: auto;
-      margin-right: auto;
-      cursor: pointer;
+  }
+  .btn-close {
+    float: left;
+    width: 45%;
+    height: 34px;
+    color: white;
+    font-size: 13px;
+    line-height: 2.6em;
+    text-align: center;
+    background: #444;
+    border-radius: 7px;
+    border: 1px solid white;
+    margin-left: 3%;
+    p {
+      width: 100%;
+      height:100%;
+      padding-left: 5%;
+      background: image-url("mobile/modal-close.png") no-repeat;
+      background-size: 15px;
+      background-position: 25% 9px;
     }
   }
-  .area-selected-close {
-    position: absolute;
-    top: -18px;
-    right: -18px;
-    width: 44px;
-    height: 44px;
-    background: image-url("desktop/modal-close-reverse.png") no-repeat;
-    cursor: pointer;
+  .btn-decide-day {
+    float: right;
+    width: 45%;
+    height: 34px;
+    color: white;
+    font-size: 13px;
+    line-height: 2.6em;
+    text-align: center;
+    background: #B20000;
+    border-radius: 7px;
+    border: 1px solid white;
+    margin-right: 3%;
+    p {
+      padding-left: 5%;
+    }
   }
 }
 .organizer-area {
@@ -1005,7 +1047,6 @@ footer {
         font-weight: bold;
         padding-top: 5px;
         padding-left: 22px;
-        cursor: pointer;
         &:hover {
           opacity: 0.7;
         }
