--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -1,11 +1,12 @@
 .time-selection {
-  width: 90%;
+  width: 95%;
   @media only screen and (min-width: 760px) {
     width: 800px;
   }
   margin-top:20px;
   margin-left: auto;
   margin-right: auto;
+  padding-right: 40px;
   text-align: center;
   border-collapse: separate;
   border-spacing: 1px;
@@ -14,6 +15,7 @@
       td {
         padding-top: 10px;
         padding-bottom: 10px;
+        font-size: 8px;
       }
     }
     &.even-time-true {
@@ -27,18 +29,18 @@
       color: $main-color;
       font-weight: bold;
       &.cell {
-        width: 5px;
+        width: 5%;
         @media only screen and (min-width: 760px) {
           width: 10%;
         }
         height: 20px;
-        cursor: image-url("common/pointer-pen.png") no-repeat;
+        cursor: image-url("desktop/pointer-pen.png"), default;
         &.time-label {
           width: 1%;
-          padding-left: 20px;
-          padding-right: 10px;
+          padding-left: 5px;
+          padding-right: 5px;
           text-align: right;
-          font-size: 13px;
+          font-size: 12px;
           color: #535353;
           cursor: default;
         }
