--- a/app/views/mobile/create-event.html
+++ b/app/views/mobile/create-event.html
@@ -5,23 +5,11 @@
       イベントを作成する
     </h1>
 
-<!--　１ページ目
-    <div class="create-book" ui-view=""></div>
+    <div ui-view=""></div>
 
-    <div class="calendar-area">
-      <h2>
-        <span class="label" for=""><small>*</small>日程指定</span>
-      </h2>
-      <calendar toggable="true">
-      </calendar>
-    </div>
+<!-- 　１ページ目 -->
 
-    <div class="clear"></div>
 
-    <div class="btn-next-link">
-      <p>次へ</p>
-    </div>
--->
 <!--　２ページ目
 
     <h2 class="create-event">
@@ -36,7 +24,7 @@
 -->
 
 <!--　３ページ目-->
-    <div class="confirm-book-mobile">
+<!--     <div class="confirm-book-mobile">
       <table>
         <tr>
           <td colspan="2" class="conf-event-title">
@@ -105,7 +93,7 @@
 
     <div class="btn-goinput">
       <p>自分の予定を入力する</p>
-    </div>
+    </div> -->
 
   </div>
 </div>
