Add support for mobile in event creation page.

--- a/app/partials/mobile/create-event/time-selection.html
+++ b/app/partials/mobile/create-event/time-selection.html
@@ -1,4 +1,8 @@
-<h3>Select time</h3>
+<h2 class="create-event">
+  <span class="label" for=""><small>*</small>候補時間をタップしてください</span>
+</h2>
 
-<select-time selection-target="possibilities">
-</select-time>
+<div class="time-selection-area">
+  <hr class="create-event">
+  <select-time selection-target="possibilities" allow-empty="true"></select-time>
+</div>
