--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -4,7 +4,7 @@
     <h1 class="create-event">
       イベントを作成する
     </h1>
-    <div class="create-book" ui-view=""></div>
+    <ng-include src="'partials/desktop/create-event/general.html'"></ng-include>
 
     <select-time selection-target="possibilities" allow-empty="true">
     </select-time>
