Improve mobile support for home page.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,9 @@
       <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
-    <button href="#/events" fast-link>イベントを作成する</button>
+    <h2>
+      <button href="#/create-event" fast-link>イベントを作成する</button>
+    </h2>
   </div>
 </div>
 <div class="feature-bar">
@@ -75,23 +77,3 @@
     <button href="#/create-event" fast-link>イベントを作成する</button>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
