Improve modal after save success.

--- a/app/partials/desktop/create-event/general.html
+++ b/app/partials/desktop/create-event/general.html
@@ -1,8 +1,12 @@
 <div class="create-book">
   <table class="book-left">
     <tr class="action">
-      <th><span class="label" for="event-title"><small>*</small>イベント名</span></th>
-      <td><input type="text" id="event-title" ng-model="event.title"></td>
+      <th>
+        <span class="label" for="event-title">
+        <small>*</small>イベント名</span></th>
+      <td>
+        <input type="text" id="event-title" ng-model="event.title">
+      </td>
     </tr>
     <tr class="action">
       <th>
