--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -1,6 +1,8 @@
 <div class="page">
   <div class="content white">
 
+    <span href="#" ng-click="foo()">foo</span>
+
     <h1 class="create-event">
       イベントを作成する
     </h1>
