--- a/app/partials/desktop/create-event/creation.html
+++ b/app/partials/desktop/create-event/creation.html
@@ -1,3 +1,6 @@
+<h1 class="create-event">
+  イベントを作成する
+</h1>
 <div class="create-book">
   <table class="book-left">
     <tr class="action">
@@ -41,4 +44,16 @@
     <calendar toggable="true">
     </calendar>
   </div>
+</div>
+<select-time selection-target="possibilities" allow-empty="true">
+</select-time>
+
+<div class="btn-create-event">
+  <input
+    class="create-event"
+    type="image"
+    src="images/desktop/btn-create-event-long.png"
+    fast-click="saveEvent()"
+  >
+  <p>イベントを作成する</p>
 </div>
