Fix time selection.

--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -5,7 +5,7 @@
 
   <div ng-include src="'partials/desktop/select-time/time-select-control.html'"></div>
 
-  <table class="time-selection {{cssClass}}" start-column="1">
+  <table class="time-selection {{cssClass}}" selectable-table="" start-column="1">
     <thead>
       <tr class="days-of-week">
         <td></td>
