Fix table style.

--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -8,7 +8,7 @@
   margin-right: auto;
   padding-right: 40px;
   text-align: center;
-  border-collapse: separate;
+  border-collapse: collapse;
   border-spacing: 1px;
   tr {
     &.days-of-week {
