Add copy button.

--- a/app/partials/desktop/create-event/success-modal.html
+++ b/app/partials/desktop/create-event/success-modal.html
@@ -53,8 +53,11 @@
     <div class="share-url">
       <p>{{event.$url()}}</p>
       <div class="btn-copy">
-        <p>コピー！</p>
+        <p>コピー?</p>
       </div>
+    </div>
+    <div id="copy-confirm">
+      Copied!
     </div>
   </div>
   <div class="share-box-right">
