--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -9,7 +9,7 @@
     <thead>
       <tr class="days-of-week">
         <td></td>
-        <td ng-repeat="dateInfo in dates">
+        <td ng-repeat="dateInfo in dates" ng-click="selectAll(dateInfo)">
           {{ dateInfo.date | date:'MM/d（EEE曜）' }}
         </td>
       </tr>
