Add functionality to disable past dates when selecting in calendar.

--- a/app/partials/desktop/create-event/creation.html
+++ b/app/partials/desktop/create-event/creation.html
@@ -41,7 +41,7 @@
   </table>
   <div class="book-right">
     <span><small>*</small>所要時間</span>
-    <calendar toggable="true">
+    <calendar toggable="true" allow-past-dates="false">
     </calendar>
   </div>
 </div>
