--- a/app/partials/mobile/header.html
+++ b/app/partials/mobile/header.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <header class="create-mode">
-  <a ui-sref="home" fast-link>
+  <a href="javascript:void(0)" back-button>
     <div class="back-link">
       <img src="images/mobile/btn-back.png" alt="MeetUp">
     </div>
