--- a/app/partials/mobile/header.html
+++ b/app/partials/mobile/header.html
@@ -1,18 +1,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <header class="create-mode">
-  <a href="javascript:void(0)" back-button>
-    <div class="back-link">
-      <img src="images/mobile/btn-back.png" alt="MeetUp">
+
+  <ng-switch on="titleBar.hasPrevious">
+    <div ng-switch-when="true">
+      <a href="javascript:void(0)" back-button>
+        <div class="back-link">
+          <img src="images/mobile/btn-back.png" alt="MeetUp">
+        </div>
+      </a>
     </div>
-  </a>
+  </ng-switch>
+
   <a ui-sref="home" fast-link>
     <div class="logo create-center">
       <img src="images/common/logo-white.png" alt="MeetUp">
     </div>
   </a>
-  <a ui-sref="home" fast-link>
-    <div class="next-link">
-      <p>次へ</p>
+
+  <ng-switch on="titleBar.hasNext">
+    <div ng-switch-when="true">
+      <a
+        href="javascript:void(0)"
+        dsref="{{titleBar.nextState}}"
+        ng-class="{disabled: titleBar.nextDisabled}"
+        fast-link
+      >
+        <div class="next-link">
+          <p>次へ</p>
+        </div>
+      </a>
     </div>
-  </a>
+  </ng-switch-when>
 </header>
