--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -2,6 +2,12 @@ body {
   font-family:Helvetica,Arial,'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
 }
 
+a {
+  &.disabled {
+    cursor: default;
+  }
+}
+
 .white {
   background: white;
 }
