--- a/app/partials/mobile/create-event/time-selection.html
+++ b/app/partials/mobile/create-event/time-selection.html
@@ -6,3 +6,13 @@
   <hr class="create-event">
   <select-time selection-target="possibilities" allow-empty="true"></select-time>
 </div>
+
+<div class="btn-next-link"
+     ng-class="{disabled: !calendar.hasSelectedDates()}">
+  <a href="javascript:void(0)"
+     dsref="^.select-time"
+     ng-class="{disabled: !calendar.hasSelectedDates()}"
+     fast-link>
+     作成
+    </a>
+</div>
