--- a/app/partials/mobile/header.html
+++ b/app/partials/mobile/header.html
@@ -26,7 +26,7 @@
         fast-link
       >
         <div class="next-link">
-          <p>次へ</p>
+          <p ng-bind="titleBar.nextText"></p>
         </div>
       </a>
     </div>
