--- a/app/partials/mobile/create-event/time-selection.html
+++ b/app/partials/mobile/create-event/time-selection.html
@@ -12,7 +12,7 @@
   <a href="javascript:void(0)"
      dsref="^.select-time"
      ng-class="{disabled: !calendar.hasSelectedDates()}"
-     fast-link>
+     fast-click="saveEvent()">
      作成
     </a>
 </div>
