--- a/app/partials/mobile/create-event/confirmation.html
+++ b/app/partials/mobile/create-event/confirmation.html
@@ -2,7 +2,7 @@
   <table>
     <tr>
       <td colspan="2" class="conf-event-title">
-        MeetUpリリース打ち上げパーティ
+        {{event.title}}
       </td>
     </tr>
     <tr>
@@ -15,15 +15,15 @@
         所要時間：
       </th>
       <td class="conf-event-duration">
-        3 時間くらい
+        約{{event.duration}}時間
       </td>
     </tr>
-    <tr>
+    <tr ng-show="event.description">
       <th>
         コメント：
       </th>
       <td class="conf-event-description">
-        高田馬場で飲み放題で〜す。3000円くらい
+        {{event.description}}}
       </td>
     </tr>
     <tr>
@@ -31,7 +31,9 @@
         日程：
       </th>
       <td class="conf-event-dates">
-        9/15(月), 9/16(火), 9/17(水), 9/15(月), 9/16(火), 9/17(水)
+        <span ng-repeat="dateInfo in timeContainer.dates">
+          {{ dateInfo.date | date:'MM/d（EEE）' }}
+        </span>
       </td>
     </tr>
   </table>
@@ -44,7 +46,7 @@
     <span class="label" for=""><small>*</small>下記URLを参加者へ送ってください</span>
   </h2>
   <div class="share-box">
-    <input type="textbox">
+    <input type="textbox" value="{{event.getUrl()}}">
     <div class="copy-box">
       <p>コピー！</p>
     </div>
