Improve general performance of time selection.

--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -22,7 +22,7 @@
         <td class="cell"
             ng-class="{'time-label': show, hidden: dates.length == 0}"
             ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
-        <td class="cell selected-{{isSelected(x, y)}}"
+        <td class="cell time-cell selected-{{isSelected(x, y)}}"
             ng-repeat="x in daysIndexes"
             ng-class="{hidden: x >= dates.length, opened: isOpened(x, y)}">
         </td>
