--- a/app/partials/mobile/create-event/select-time.html
+++ b/app/partials/mobile/create-event/select-time.html
@@ -17,7 +17,7 @@
       <td class="cell even-time-{{y % 4 == 0}}"
           ng-class="{'time-label': show, hidden: dates.length == 0}"
           ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
-      <td class="cell selected-{{isSelected(x, y)}}" ng-repeat="x in daysIndexes" emit-on-render="parent" ng-class="{hidden: x >= dates.length}">
+      <td class="cell time-cell selected-{{isSelected(x, y)}}" ng-repeat="x in daysIndexes" emit-on-render="parent" ng-class="{hidden: x >= dates.length}">
       </td>
     </tr>
   </table>
