--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -10,7 +10,7 @@
       <tr class="days-of-week">
         <td></td>
         <td ng-repeat="dateInfo in dates" ng-click="selectAll(dateInfo)">
-          {{ dateInfo.date | date:'MM/d（EEE曜）' }}
+          {{ dateInfo.date | date:'MM/d (EEE)' }}
         </td>
       </tr>
     </thead>
