--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -15,6 +15,9 @@
       td {
         padding-top: 10px;
         padding-bottom: 10px;
+        @media only screen and (min-width: 760px) {
+          font-size: 16px;
+        }
         font-size: 8px;
       }
     }
