--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -1,4 +1,5 @@
 <div class="time-output">
+  <div class="error">イベント名を入力してください</div>
   <p class="label" for="event-name">
     <small>*</small>日時候補
   </p>
