--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -51,7 +51,7 @@ header {
   .logo {
     float: left;
     margin-top: 15px;
-    margin-left: 6px;
+    margin-left: 26px;
     img {
       width: 168px;
     }
@@ -96,7 +96,7 @@ hr {
 }
 
 .mainvisual {
-  width: 1200px;
+  width: 1000px;
   height: 546px;
   margin-left: auto;
   margin-right: auto;
@@ -105,7 +105,7 @@ hr {
     width:400px;
     position: relative;
     top: 190px;
-    left: 140px;
+    left: 40px;
     img.logo {
       width: 230px;
     }
@@ -263,16 +263,17 @@ hr {
   }
 }
 .mainvisual2 {
-  width: 1200px;
+  width: 1000px;
   height: 572px;
   margin-left: auto;
   margin-right: auto;
   background: image-url("desktop/mainvisual2.png") no-repeat;
+  background-position: -300 center;
   .catch-area {
     width:400px;
     position: relative;
     top: 90px;
-    left: 420px;
+    left: 320px;
     img.logo {
       width: 230px;
       margin-left: 65px;
@@ -297,6 +298,37 @@ hr {
         opacity: 0.7;
       }
     }
+  }
+}
+
+.error {
+  width: 190px;
+  text-align: center;
+  position: relative;
+  padding: 10px;
+  line-height: 1.0em;
+  font-size: 13px;
+  background: red;
+  color: white;
+  border-radius: 5px;
+  opacity: 0.8;
+  &:after {
+    content: '';
+    position: absolute;
+    border-top: 7px solid red;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    bottom: -4px;
+    left: 95px;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    border-top: 7px solid red;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    bottom: -7px;
+    left: 95px;
   }
 }
 
@@ -326,6 +358,12 @@ hr {
     td {
       text-align: left;
       padding-left: 30px;
+      position: relative;
+      .error {
+        position: absolute;
+        top:-28px;
+        left:32px;
+      }
       input {
         width: 200px;
         height: 25px;
@@ -345,6 +383,10 @@ hr {
   margin-right: 68px;
   vertical-align: top;
   color: #777777;
+  .error {
+    float: right;
+    margin-top: -20px;
+  }
 }
 
 .btn-create-event {
@@ -371,8 +413,16 @@ hr {
 
 .time-output {
   margin-top: 40px;
+  position: relative;
+  .error {
+    position: absolute;
+    top:-45px;
+    left:50%;
+    margin-left: -95px;
+  }
   p {
     text-align: center;
+    padding-right: 45px;
     color: #777777;
   }
   small {
@@ -582,7 +632,7 @@ hr {
     text-align: left;
     ul {
       overflow: hidden;
-      padding-top: 5px;
+      padding-top: 2px;
       padding-bottom: 5px;
       li {
         float: left;
@@ -590,8 +640,9 @@ hr {
         height: 27px;
         background: image-url("common/icon-person-black.png") no-repeat;
         background-size: 15px;
+        background-position: 5px 5px;
         padding-left: 25px;
-        padding-top: -1px;
+        padding-top: 5px;
         margin-top: 3px;
         margin-left: 10px;
         line-height: 1.3em;
@@ -608,8 +659,13 @@ hr {
         }
       }
     }
+    .edit {
+      float: right;
+      margin-top: 2px;
+      margin-right: 3px;
+    }
     p {
-      font-size: 15px;
+      font-size: 13px;
       margin-top: 10px;
       margin-left: 12px;
       color: #777777;
@@ -624,10 +680,12 @@ hr {
 .heatmap-area {
   position: relative;
   margin-top: 30px;
+  width:842px;
+  margin-left: auto;
+  margin-right: auto;
   h2 {
     width: 220px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 330px;
     background: image-url("common/logo-symbol.png") no-repeat;
     padding-bottom: 3px;
     font-size: 25px;
@@ -763,6 +821,7 @@ hr {
     text-align: center;
   }
   .share-box-left {
+    position: relative;
     width: 590px;
     height: auto;
     float: left;
@@ -780,33 +839,34 @@ hr {
       color: white;
     }
     .share-url {
-      position: relative;
-      width: 490px;
+      width: 485px;
       padding:10px;
       padding-right: 80px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 5px;
       background: white;
       color: #202020;
-      .btn-copy {
-        position: absolute;
-        top: 1px;
-        right: 0px;
-        width: 75px;
-        height: 36px;
-        background: image-url("common/btn-copy.png") no-repeat;
-        background-size: 73px;
-        cursor: pointer;
-        &:hover {
-          opacity: 0.7;
-        }
-        p {
-          color: white;
-          font-size: 14px;
-          text-align: center;
-          padding-top: 10px;
-        }
+    }
+    .btn-copy {
+      position: absolute;
+      bottom: 5px;
+      right: 5px;
+      width: 75px;
+      height: 36px;
+      background: image-url("common/btn-copy.png") no-repeat;
+      background-size: 73px;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
       }
+      p {
+        color: white;
+        font-size: 14px;
+        text-align: center;
+        padding-top: 10px;
+      }
+    }
+    .copy-confirm {
+
     }
   }
   .share-box-right {
