Replace MeetUp by MeetApp on all files!

--- a/app/partials/desktop/header.html
+++ b/app/partials/desktop/header.html
@@ -1,7 +1,7 @@
 <header class="content">
   <a ui-sref="home" fast-link>
     <div class="logo">
-      <img src="images/common/logo-white.png" alt="MeetUp">
+      <img src="images/common/logo-white.png" alt="MeetApp">
     </div>
   </a>
 </header>
