--- a/app/partials/mobile/header.html
+++ b/app/partials/mobile/header.html
@@ -5,7 +5,7 @@
     <div ng-switch-when="true">
       <a href="javascript:void(0)" back-button>
         <div class="back-link">
-          <img src="images/mobile/btn-back.png" alt="MeetUp">
+          <img src="images/mobile/btn-back.png" alt="MeetApp">
         </div>
       </a>
     </div>
@@ -13,7 +13,7 @@
 
   <a ui-sref="home" fast-link>
     <div class="logo create-center">
-      <img src="images/common/logo-white.png" alt="MeetUp">
+      <img src="images/common/logo-white.png" alt="MeetApp">
     </div>
   </a>
 
