--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,7 @@
 <div class="mainvisual">
   <div class="catch-area">
     <h1>
-      <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
+      <img src="images/common/logo-green.png" class="logo" alt="MeetApp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
     <h2>
@@ -11,7 +11,7 @@
 </div>
 <div class="feature-bar">
   <div class="title">
-    <img src="images/common/logo-white.png" alt="MeetUp" class="logo">
+    <img src="images/common/logo-white.png" alt="MeetApp" class="logo">
     <h2>3つの革命的特徴</h2>
   </div>
 </div>
@@ -21,7 +21,7 @@
 </div>
 <div class="howto-bar">
   <div class="title">
-    <img src="images/common/logo-white.png" alt="MeetUp" class="logo">
+    <img src="images/common/logo-white.png" alt="MeetApp" class="logo">
     <h2>とても簡単な使い方</h2>
   </div>
 </div>
@@ -46,13 +46,13 @@
 <div class="mainvisual2">
   <div class="catch-area">
     <h1>
-      <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
+      <img src="images/common/logo-green.png" class="logo" alt="MeetApp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
     <ng-switch on="device">
       <div ng-switch-when="mobile">
         <h2>
-          <img src="images/mobile/iphone.png" alt="MeetUp">
+          <img src="images/mobile/iphone.png" alt="MeetApp">
           <div class="clear"></div>
           <button href="#/create-event" fast-link>イベントを作成する</button>
         </h2>
