--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="mainvisual">
   <div class="catch-area">
     <h1>
-      <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
+      <img src="images/common/logo-green.png" class="logo" alt="MeetApp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
     <h2>
@@ -11,7 +11,7 @@
 </div>
 <div class="feature-bar">
   <div class="title">
-    <img src="images/common/logo-white.png" alt="MeetUp" class="logo">
+    <img src="images/common/logo-white.png" alt="MeetApp" class="logo">
     <h2>3つの革命的特徴</h2>
   </div>
 </div>
@@ -21,26 +21,26 @@
     <div class="feature-box">
       <h3>1.世界最速</h3>
       <p class="center"><img src="images/common/icon-timer.png" alt="世界最速"></p>
-      <p>MeetUpは<b>圧倒的に早い</b>スケジュール調整が可能です。その速さは他のあらゆるツールと比べものになりません。</p>
+      <p>MeetAppは<b>圧倒的に早い</b>スケジュール調整が可能です。その速さは他のあらゆるツールと比べものになりません。</p>
       <p>旅行、デート、ミーティング、取引先との打ち合わせ……。これらの日程を決めるとき、効率の良い時間の使い方をしたい人は、ぜひ一度試してみてください。</p>
     </div>
     <div class="feature-box">
       <h3>2.ユビキタス</h3>
       <p class="center"><img src="images/common/icon-ubiquitous.png" alt="ユビキタス"></p>
-      <p>パソコンはもちろん、MeetUpはスマホでも驚くほど簡単に利用できます。そのため、移動中や外出先でのちょっとした時間で、また、ふとした会話の流れから手軽にスケジュール調整が可能なのです。
-      <p><b>「いつでも、どこでも、だれでも」</b><br />MeetUpはこの三原則を徹底的に追求しています。</p>
+      <p>パソコンはもちろん、MeetAppはスマホでも驚くほど簡単に利用できます。そのため、移動中や外出先でのちょっとした時間で、また、ふとした会話の流れから手軽にスケジュール調整が可能なのです。
+      <p><b>「いつでも、どこでも、だれでも」</b><br />MeetAppはこの三原則を徹底的に追求しています。</p>
     </div>
     <div class="feature-box">
       <h3>3.直感的操作</h3>
       <p class="center"><img src="images/common/icon-intuitive.png" alt="直感的操作"></p>
-      <p>Meetupは直感的に操作できるデザインを採用しています。都合の良い時間を<b>スワイプするだけのシンプルな操作</b>は、分かりやすい上に、どこか楽しい。</p>
+      <p>MeetAppは直感的に操作できるデザインを採用しています。都合の良い時間を<b>スワイプするだけのシンプルな操作</b>は、分かりやすい上に、どこか楽しい。</p>
       <p>もしあなたが楽しいイベントを開催するなら、スケジュール調整そのものから楽しくしてみませんか？</p>
     </div>
   </div>
 </div>
 <div class="howto-bar">
   <div class="title">
-    <img src="images/common/logo-white.png" alt="MeetUp" class="logo">
+    <img src="images/common/logo-white.png" alt="MeetApp" class="logo">
     <h2>とても簡単な使い方</h2>
   </div>
 </div>
@@ -71,7 +71,7 @@
 <div class="mainvisual2">
   <div class="catch-area">
     <h1>
-      <img src="images/common/logo-green.png" class="logo" alt="MeetUp">
+      <img src="images/common/logo-green.png" class="logo" alt="MeetApp">
       <p class="description">世界最速のスケジュール調整ツール</p>
     </h1>
     <button href="#/create-event" fast-link>イベントを作成する</button>
