--- a/app/partials/desktop/footer.html
+++ b/app/partials/desktop/footer.html
@@ -1,4 +1,4 @@
 <footer class="content">
-  <p><img src="images/common/logo-white.png" alt="MeetUp" class="logo"></p>
+  <p><img src="images/common/logo-white.png" alt="MeetApp" class="logo"></p>
   <p class="copyright">&copy; MeetApp</p>
 </footer>
