Improve time selection.

--- a/app/partials/desktop/create-event/creation.html
+++ b/app/partials/desktop/create-event/creation.html
@@ -47,7 +47,7 @@
     </calendar>
   </div>
 </div>
-<select-time selection-target="possibilities" allow-empty="true">
+<select-time selection-target="possibilities" allow-empty="true" selectable="true">
 </select-time>
 
 <div class="btn-create-event">
