--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -5,28 +5,15 @@
 
   <div ng-include src="'partials/desktop/select-time/time-select-control.html'"></div>
 
-  <table class="time-selection {{cssClass}}" selectable-table="" start-column="1">
-    <thead>
-      <tr class="days-of-week">
-        <td></td>
-        <td ng-repeat="dateInfo in dates" ng-click="selectAll(dateInfo)">
-          {{ dateInfo.date | date:'MM/d（EEE曜）' }}
-        </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="even-time-{{y % 4 < 2}}"
-          ng-repeat="y in rows"
-          ng-init="show=y % 2 == 0"
-          emit-on-render>
-        <td class="cell"
-            ng-class="{'time-label': show, hidden: dates.length == 0}"
-            ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
-        <td class="cell time-cell selected-{{isSelected(x, y)}}"
-            ng-repeat="x in daysIndexes"
-            ng-class="{hidden: x >= dates.length, opened: isOpened(x, y)}">
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <ng-switch on="selectable">
+    <table class="time-selection {{cssClass}}" selectable-table="" start-column="1" ng-switch-when="true">
+      <thead ng-include src="'partials/desktop/select-time/table-head.html'"></div>
+      <tbody ng-include src="'partials/desktop/select-time/table-body.html'"></div>
+    </table>
+    <table class="time-selection {{cssClass}}" start-column="1" ng-switch-default>
+      <thead ng-include src="'partials/desktop/select-time/table-head.html'"></div>
+      <tbody ng-include src="'partials/desktop/select-time/table-body.html'"></div>
+    </table>
+  </ng-switch>
+
 </div>
