--- a/app/partials/mobile/calendar/toolbar.html
+++ b/app/partials/mobile/calendar/toolbar.html
@@ -1,6 +1,6 @@
 <button class="previous" fast-click="calendar.toLastMonth()">
 </button>
-<span class="current-month">
+<span class="current-month-title">
   {{ calendar.date | date: 'yyyy年M月'}}
 </span>
 <button class="next" fast-click="calendar.toNextMonth()">
