Add input-area contents on Mobile

--- a/app/partials/mobile/events/general.html
+++ b/app/partials/mobile/events/general.html
@@ -99,15 +99,74 @@
 <div class="input-area">
 
   <div class="tabs">
-    <div class="tab-input">
-      <p>自分の予定</p>
-    </div>
     <div class="tab-heatmap">
       <p>みんなの予定</p>
+    </div>
+    <div class="tab-input">
+      <p>自分の予定</p>
     </div>
   </div>
 
   <div class="input-schedule">
+
+  <div class="input-new">
+    <table>
+      <tr>
+        <td colspan="2">
+          <h3>予定を入力する</h3>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <hr>
+        </td>
+      </tr>
+      <tr>
+        <th>名前</th>
+        <td><input type="text"></td>
+      </tr>
+      <tr>
+        <th>パスワード</th>
+        <td><input type="text"></td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <button>
+            <p>決定</p>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="input-edit">
+    <table>
+      <tr>
+        <td colspan="2">
+          <h3>予定を編集する</h3>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <hr>
+        </td>
+      </tr>
+      <tr>
+        <th>名前</th>
+        <td><select name="" id=""></select></td>
+      </tr>
+      <tr>
+        <th>パスワード</th>
+        <td><input type="text"></td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <button>
+            <p>決定</p>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
 
     <select-time selection-target="possibilities" allow-empty="true">
     </select-time>
