--- a/app/partials/mobile/events/general.html
+++ b/app/partials/mobile/events/general.html
@@ -108,69 +108,68 @@
   </div>
 
   <div class="input-schedule">
-
-  <div class="input-new">
-    <table>
-      <tr>
-        <td colspan="2">
-          <h3>予定を入力する</h3>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <hr>
-        </td>
-      </tr>
-      <tr>
-        <th>名前</th>
-        <td><input type="text"></td>
-      </tr>
-      <tr>
-        <th>パスワード</th>
-        <td><input type="text"></td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <button>
-            <p>決定</p>
-          </button>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <div class="input-edit">
-    <table>
-      <tr>
-        <td colspan="2">
-          <h3>予定を編集する</h3>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <hr>
-        </td>
-      </tr>
-      <tr>
-        <th>名前</th>
-        <td><select name="" id=""></select></td>
-      </tr>
-      <tr>
-        <th>パスワード</th>
-        <td><input type="text"></td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <button>
-            <p>決定</p>
-          </button>
-        </td>
-      </tr>
-    </table>
-  </div>
-
+    <div class="input-login">
+      <img src="images/mobile/pencil.png" alt="予定を入力する" class="pencil">
+      <table>
+        <tr>
+          <td colspan="2">
+            <h3>予定を入力する</h3>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <hr>
+          </td>
+        </tr>
+        <tr>
+          <th>名前</th>
+          <td><input type="text"></td>
+        </tr>
+        <tr>
+          <th>パスワード</th>
+          <td><input type="text"></td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <button>
+              <p>決定</p>
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="input-login">
+      <img src="images/mobile/pencil.png" alt="予定を編集する" class="pencil">
+      <table>
+        <tr>
+          <td colspan="2">
+            <h3>予定を編集する</h3>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <hr>
+          </td>
+        </tr>
+        <tr>
+          <th>名前</th>
+          <td><select name="" id=""></select></td>
+        </tr>
+        <tr>
+          <th>パスワード</th>
+          <td><input type="text"></td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <button>
+              <p>決定</p>
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
     <select-time selection-target="possibilities" allow-empty="true">
     </select-time>
-
   </div>
 
   <div class="area-selected">
