--- a/app/styles/partials/_mobile.scss
+++ b/app/styles/partials/_mobile.scss
@@ -407,6 +407,14 @@ footer {
 .calendar-area {
   margin-top: 20px;
   overflow: hidden;
+  h2 {
+    text-align: center;
+    color: #777777;
+    font-size: 13px;
+  }
+  small {
+    color:red;
+  }
 }
 
 
@@ -885,6 +893,84 @@ footer {
       p {
         color: #777;
         padding-top: 8px;
+      }
+    }
+  }
+  .input-schedule {
+    margin-top:20px;
+    width:95%;
+    margin-left: auto;
+    margin-right: auto;
+    .input-login {
+      width:90%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 20px;
+      overflow: hidden;
+      position: relative;
+      img.pencil {
+        position: absolute;
+        top:5px;
+        right:0px;
+        width: 50px;
+      }
+      table {
+        margin-top:20px;
+        width:100%;
+        border: 3px solid $main-color;
+        padding:5px;
+        tr {
+          width:96%;
+          margin-left: auto;
+          margin-right: auto;
+          th {
+            color: #777777;
+            float: right;
+            margin-top:20px;
+            margin-left: 20%;
+            text-align: right;
+          }
+          td {
+            h3 {
+              text-align: center;
+              color: $main-color;
+              padding-top: 13px;
+              padding-bottom: 5px;
+              font-size: 20px;
+              font-weight: bold;
+            }
+            hr {
+              width:85%;
+              margin-left: auto;
+              margin-right: auto;
+              border-top: 2px dotted $main-color;
+            }
+            input {
+              float: left;
+              width: 60%;
+              margin-top:20px;
+              margin-left: 20px;
+            }
+            select {
+              float: left;
+              width: 60%;
+              margin-top:20px;
+              margin-left: 20px;
+            }
+            button {
+              width:200px;
+              position: relative;
+              top:10px;
+              left:50%;
+              margin-left: -100px;
+              margin-bottom: 20px;
+              background: image-url("common/back-green-main.png");
+              color:white;
+              font-size: 17px;
+              border-radius: 3px;
+            }
+          }
+        }
       }
     }
   }
