Update event page logic.

--- a/app/partials/desktop/events/availabilities-modal.html
+++ b/app/partials/desktop/events/availabilities-modal.html
@@ -11,11 +11,11 @@
   <input type="password" id="password" ng-model="user.password">
 </div>
 
-<select-time selection-target="availabilities" allow-empty="true" selectable="true">
+<select-time selection-target="availabilities" allow-empty="true" selectable="true" container-name="timeEditContainer">
 </select-time>
 
 
 <a href="javascript:void(0)" class="close">Close</a>
-<a href="javascript:void(0)">Save</a>
+<a href="javascript:void(0)" fast-click="saveAvailabities()">Save</a>
 
 </div>
